Merge 8.2 changes.